# axum-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: ci.yml  security.yml
.sqlx/: query-6d45749e8da8fb7b23a316a229d4b60a97fc7914852c4cf15a6f500dbb67ab65.json  query-a24027da8ae71db945cb39cb1aab0188440546655d5a3d2db5a33ae0fad68f4f.json  query-af9745ffa4cea0619dc4a7d0cf75e77fd4dcc7585b384b3084649f22c5ba30fa.json  query-bf34ff34dd47ce731f62916f86f45840323b4835702cc80b7cc5d887ca5d9073.json  query-e3838cc096acdf3a9239d39b3dc2fa1f287f79a5e67b1f283e4f1caf486255b0.json
crates/app/: Cargo.toml
crates/app/lib/: config.rs  error.rs  mod.rs  observability.rs  server.rs
crates/app/lib/api/: mod.rs  openapi.rs  routes.rs
crates/app/lib/api/domains/: mod.rs  services.rs
crates/app/lib/api/domains/todos/: handlers.rs  mod.rs  models.rs  service.rs
crates/app/lib/api/utils/response/: data.rs  error.rs
crates/app/migrations/: 202604240001_create_todos.sql  202604240002_harden_todos_constraints.sql
crates/app/src/: config.rs  error.rs  lib.rs  main.rs  observability.rs  openapi.rs  startup.rs
crates/app/src/domains/: mod.rs
crates/app/src/domains/status/: health.rs  mod.rs
crates/app/src/routes/: mod.rs
crates/app/tests/: health_check.rs  todos_crud.rs
crates/app/tests/helpers/: mod.rs
openapi/: openapi.json
scripts/: migrate.sh  prepare_sqlx.sh
